--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 10px;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
     background-color: var(--white);
