--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-    // display: flex;
-    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-height: min((100vh - 96px) - 60px, 734px);
     padding-top: 8px;
