--- a/src/pages/ActionQuestion/ActionQuestion.module.scss
+++ b/src/pages/ActionQuestion/ActionQuestion.module.scss
@@ -5,7 +5,7 @@
     --default-layout-right: 10px;
     position: relative;
 
-    height: 2000px;
+    height: auto;
 }
 
 .container {
@@ -19,100 +19,51 @@
     width: 850px;
     height: auto;
 
-    border: 1px solid rgb(214, 216, 218);
+    // border: 1px solid rgb(214, 216, 218);
+    // border-radius: 6px;
+    // background-color: rgba(22, 24, 35, 0.03);
+    // box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.card-question,
+.card-answer {
+    margin-bottom: 15px;
+    padding: 10px 10px 10px 10px;
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.6);
     border-radius: 6px;
+    border: 1px solid rgb(214, 216, 218);
     background-color: rgba(22, 24, 35, 0.03);
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.card-title {
+.card-select {
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    height: auto;
-    padding: 0 8px;
-    border-bottom: 1px solid rgb(214, 216, 218);
-    padding: 10px;
-    background-color: #72acf6;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    ul {
-        display: flex;
-        flex: wrap;
-        padding: 0;
-        height: auto;
-        width: cover;
-        .tag {
-            width: auto;
-            height: 32px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            background-color: rgb(124, 32, 224);
-            border-radius: 20px;
-            cursor: pointer;
-            + .tag {
-                margin-left: 5px;
-            }
-            .tag-content {
-                margin-left: 8px;
-            }
-            .tag-icon {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 50%;
-                height: 100%;
-                width: 24px;
-                border-top-right-radius: 20px;
-                border-bottom-right-radius: 20px;
-                font-size: 1.8rem;
-                margin-right: 3px;
-                &:hover {
-                    cursor: pointer;
-                    color: peru;
-                }
-                &:active {
-                    background-color: rgba(22, 24, 35, 0.06);
-                }
-            }
-        }
-    }
-}
-
-.card-select-tag {
-    border-radius: 20px;
-    border: 1px solid rgb(214, 216, 218);
-    margin-left: 12px;
-    padding: 7px;
-    display: flex;
-    align-items: center;
     justify-content: center;
+}
+
+.button-left,
+.button-right {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 3rem;
+    position: absolute;
     cursor: pointer;
-}
-
-.card-content {
-    font-weight: 100px;
-    font-size: 2.4rem;
-    padding: 10px;
-    height: 400px;
-}
-
-.card-action {
-    margin: 10px;
-    .button-right {
-        position: absolute;
-        right: 10px;
+    &:hover {
+        color: black;
     }
+}
+.button-left {
+    left: 10px;
+}
+.button-right {
+    right: 10px;
 }
 
 .table-wrapper {
     position: absolute;
     top: var(--default-layout-top);
     right: var(--default-layout-right);
-    width: 400px;
+    width: 350px;
     height: 400px;
     border: 1px solid rgb(214, 216, 218);
     border-radius: 6px;
@@ -122,14 +73,14 @@
 
 .table {
     overflow: auto;
-    width: 400px;
+    width: 350px;
     height: 340px;
     margin-top: 50px;
 }
 .table-title {
     position: absolute;
     padding: 14px 5px 14px 5px;
-    width: 400px;
+    width: 350px;
     flex-shrink: 0;
     border-bottom: 1px solid rgb(214, 216, 218);
     background-color: #72acf6;
@@ -141,7 +92,7 @@
         padding: auto;
         margin-left: 10px;
         + label {
-            margin-left: 180px;
+            margin-left: 130px;
         }
     }
 }
@@ -174,6 +125,7 @@
         .col-tag-label {
             width: auto;
             color: #fff;
+            margin-left: 100px;
             padding: 9px 16px;
             background-color: rgb(124, 32, 224);
             border-radius: 20px;
