--- a/src/pages/ActionQuestion/ActionQuestion.module.scss
+++ b/src/pages/ActionQuestion/ActionQuestion.module.scss
@@ -17,8 +17,7 @@
     top: var(--default-layout-top);
     left: var(--default-layout-left);
     width: 850px;
-    height: auto;
-
+    // height: auto;
     // border: 1px solid rgb(214, 216, 218);
     // border-radius: 6px;
     // background-color: rgba(22, 24, 35, 0.03);
