--- a/src/pages/ActionRealisticLabeling/ActionRealisticLabeling.module.scss
+++ b/src/pages/ActionRealisticLabeling/ActionRealisticLabeling.module.scss
@@ -4,6 +4,8 @@
     --default-layout-left: 10px;
     --default-layout-right: 10px;
     position: relative;
+
+    height: auto;
 }
 
 .container {
@@ -15,95 +17,77 @@
     top: var(--default-layout-top);
     left: var(--default-layout-left);
     width: 850px;
-    height: auto;
+    // height: auto;
+    // border: 1px solid rgb(214, 216, 218);
+    // border-radius: 6px;
+    // background-color: rgba(22, 24, 35, 0.03);
+    // box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
 
-    border: 1px solid rgb(214, 216, 218);
+.card-content {
+    margin-bottom: 15px;
+    padding: 10px 10px 10px 10px;
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.6);
     border-radius: 6px;
+    border: 1px solid rgb(214, 216, 218);
     background-color: rgba(22, 24, 35, 0.03);
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.card-title {
+.list-tag {
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    height: auto;
-    padding: 0 8px;
-    border-bottom: 1px solid rgb(214, 216, 218);
-    padding: 10px;
-    background-color: #72acf6;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    ul {
-        display: flex;
-        flex: wrap;
-        padding: 0;
-        height: auto;
-        width: cover;
-        .tag {
-            width: auto;
-            height: 32px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            background-color: rgb(124, 32, 224);
-            border-radius: 20px;
-            cursor: pointer;
-            + .tag {
-                margin-left: 5px;
-            }
-            .tag-content {
-                margin-left: 8px;
-            }
-            .tag-icon {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 50%;
-                height: 100%;
-                width: 24px;
-                border-top-right-radius: 20px;
-                border-bottom-right-radius: 20px;
-                font-size: 1.8rem;
-                margin-right: 3px;
-                &:hover {
-                    cursor: pointer;
-                    color: peru;
-                }
-                &:active {
-                    background-color: rgba(22, 24, 35, 0.06);
-                }
-            }
-        }
-    }
+    flex-direction: column;
+    width: 300px;
+    position: fixed;
+    padding: 10px 0 10px 0;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 8px;
+    z-index: 10;
 }
-
-.card-select-tag {
-    border-radius: 20px;
-    border: 1px solid rgb(214, 216, 218);
-    margin-left: 12px;
-    padding: 7px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.list-tag-title {
+    color: #1976d2 !important;
+    caret-color: #1976d2 !important;
+    font-size: 1.6rem;
+    font-weight: 300;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+.button-select-tag {
+    background-color: white;
+    font-size: 2rem;
+    padding: 5px 10px;
     cursor: pointer;
-}
-
-.card-content {
-    font-weight: 100px;
-    font-size: 2.4rem;
-    padding: 10px;
-    height: auto;
-}
-
-.card-action {
-    margin: 10px;
-    .button-right {
-        position: absolute;
-        right: 10px;
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
     }
+}
+.tag {
+    display: inline-block;
+    vertical-align: bottom;
+}
+.card-select {
+    display: flex;
+    justify-content: center;
+}
+
+.button-left,
+.button-right {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 3rem;
+    position: absolute;
+    cursor: pointer;
+    &:hover {
+        color: black;
+    }
+}
+.button-left {
+    left: 10px;
+}
+.button-right {
+    right: 10px;
 }
 
 .table-wrapper {
@@ -139,7 +123,7 @@
         padding: auto;
         margin-left: 10px;
         + label {
-            margin-left: 180px;
+            margin-left: 130px;
         }
     }
 }
@@ -172,6 +156,7 @@
         .col-tag-label {
             width: auto;
             color: #fff;
+            margin-left: 100px;
             padding: 9px 16px;
             background-color: rgb(124, 32, 224);
             border-radius: 20px;
@@ -186,4 +171,24 @@
     position: absolute;
     bottom: -50px;
     right: 10px;
+}
+
+.tag-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 100%;
+    width: 24px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    font-size: 1.8rem;
+    margin-right: 3px;
+    &:hover {
+        cursor: pointer;
+        color: peru;
+    }
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
